# tts-atom

./: .env.example  .gitignore  README.md  pyproject.toml
.codex/skills/gaeh/: SKILL.md
.cursor/rules/: gaeh.mdc
ai_harness/: execution_rules.md  harness_rules.md  reviewer_rules.md  routing_rules.md
plans/: tts-atom-mvp-0001.plan.md
project_control/: approval.json  change_requests.md  current_task.md  decision_log.md  goal.md  goal.next.md  issues.md  owner_preferences.md  phase_status.md  task_queue.json
project_control/.ggs/: assumptions.md  goal.draft.md  goal.review.json  idea.md  state.json
reports/: _triage_template.report.md  tts-atom-mvp-0001.report.md
reviews/: tts-atom-mvp-0001.review.md
scripts/: install_melotts.ps1  requirements-melotts-win.txt
specs/: tts-atom-mvp.spec.md
tests/: conftest.py  test_cache.py  test_healthz.py  test_melotts_runtime.py  test_schemas.py  test_splitter.py  test_synthesize_mock.py
tts_atom/: config.py  errors.py  logging_config.py  main.py  schemas.py  server.py
tts_atom/assets/: prewarm_phrases.zh.json
tts_atom/core/: audio_store.py  cache.py  engine.py  router.py  splitter.py  timing.py
tts_atom/providers/: audio_util.py  base.py  melotts_provider.py  melotts_runtime.py  mock_provider.py  stub_provider.py  windows_sapi_provider.py
tts_atom/roles/: default_roles.json  role_profiles.py
