[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-atom"
version = "0.1.0"
description = "Local text-to-speech atomic service for companion systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "typer>=0.12",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
melotts = [
  "melotts @ git+https://github.com/myshell-ai/MeloTTS.git",
  "numpy>=1.24",
  "soundfile>=0.12",
]

[project.scripts]
tts-atom = "tts_atom.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["tts_atom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
